@@ -22,7 +22,7 @@ setup(
         'gocept.lxml>=0.2.1',
         'gocept.mochikit>=1.3.2',
         'gocept.pagelet',
-        'gocept.selenium',
+        'gocept.selenium>=2.1.9',
         'grokcore.component>=2.2',
         'iso8601>=0.1.2',
         'lovely.remotetask',
